# motoman_ik

./: README.md
apc_models/: CMakeLists.txt  package.xml
apc_models/src/: publish_box.py  publish_boxshelf.py  publish_lab.py  publish_mesh.py  publish_scoop.py  publish_table.py
auto_test/: CMakeLists.txt  IK_solver_test.py  bin_loader.py  goal_pos_generate.py  package.xml  trajectory_run.py
auto_test/Setup/cfg/: s-model_articulated_macro.xacro  s-model_finger_articulated_macro.xacro
auto_test/Test_trajectories/: traj_file10  traj_file12  traj_file14  traj_file16  traj_file18  traj_file2  traj_file20  traj_file24  traj_file4  traj_file6  traj_file8
auto_test/collision_ball_setup/: Readme
auto_test/script/: IK_solver_test.py  Joint States  Readme  goal_pos_generate.py  traj_file 1  traj_file1  traj_file10  traj_file11  traj_file13  traj_file14  traj_file15  traj_file17  traj_file18  traj_file2  traj_file20  traj_file21  traj_file23  traj_file25  traj_file3  traj_file4  traj_file5  traj_file6  traj_file7  traj_file8  traj_file9  trajectory_run.py
auto_test/src/: auto_test.cpp
generalik_kinematics_plugin/: CMakeLists.txt  generalik_kinematics_plugin_description.xml  package.xml
generalik_kinematics_plugin/include/moveit/generalik_kinematics_plugin/: generalik_kinematics_plugin.h
generalik_kinematics_plugin/src/: .#kdl_kinematics_plugin.cpp  generalik_kinematics_plugin.cpp
motoman_wpi_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
motoman_wpi_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kinematics.yaml~  motoman.srdf  motoman_sda10f.srdf  motoman_sda10f.srdf~  ompl_planning.yaml
motoman_wpi_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  motoman_sda10f_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
trajectory_srv/: CMakeLists.txt
trajectory_srv/scripts/: trajectory_server.py
trajlib/: CMakeLists.txt  package.xml
trajlib/scripts/: bin_loader.py  euler_quaternion_quick_converter.py  generate_trajlib.py  goal_pos_generate.py  motoman_configuration.py  trajectory_client.py  trajectory_display_server.py  trajectory_server.py
trajlib/scripts/gripper/: gripper_goal_pos_generate.py  left_home_traj_generator.py  moveit_trajlib_generator.py  optimize_trajlib_generator.py
trajlib/scripts/tray/: Constraint_planner_test.py  Pose_Joint_Tray  Traj_gen.py  ajay_tray_traj_generator.py  tray_goal_pos_generator.py  tray_ik_test.py  tray_traj_generator.py
trajlib/srv/: GetTrajectory.srv  task.srv
trajlib/traj_updates/binA/: drop  forward
trajlib/traj_updates/binB/: drop  forward
trajlib/traj_updates/binC/: drop  forward
trajlib/traj_updates/binD/: drop  forward
trajlib/traj_updates/binE/: drop  forward
trajlib/traj_updates/binF/: drop  forward
trajlib/traj_updates/binG/: drop  forward
trajlib/traj_updates/binH/: drop  forward
trajlib/traj_updates/binI/: drop  forward
trajlib/traj_updates/binJ/: drop  forward
trajlib/traj_updates/binJ/Untitled Folder/: drop
trajlib/traj_updates/binK/: drop
trajlib/traj_updates/binL/: drop  forward
trajlib/traj_updates/binS/: drop
trajlib/trajectories/: .~lock.Traj_evaluation.ods#  Traj_evaluation.ods  left_arm_drop  left_arm_drop2home  left_arm_home2drop  left_arm_side
trajlib/trajectories/Torso/binA/: drop  forward
trajlib/trajectories/Torso/binB/: drop  forward
trajlib/trajectories/Torso/binC/: drop  forward
trajlib/trajectories/Torso/binD/: drop  forward
trajlib/trajectories/Torso/binE/: drop  forward
trajlib/trajectories/Torso/binF/: drop  forward
trajlib/trajectories/Torso/binG/: drop  forward
trajlib/trajectories/Torso/binH/: drop  forward
trajlib/trajectories/Torso/binI/: drop  forward
trajlib/trajectories/Torso/binJ/: drop  forward
trajlib/trajectories/Torso/binK/: drop  forward
trajlib/trajectories/Torso/binL/: drop  forward
trajlib/trajectories/binA/: Dump  Pick  Rotate  drop  enter  forward  scan
trajlib/trajectories/binB/: Dump  Home  Lift  Pick  drop  enter  forward  scan
trajlib/trajectories/binB/Untitled Folder/: forward
trajlib/trajectories/binC/: Dump  Home  Lift  Pick  bin 3test_pos  drop  enter  forward  scan
trajlib/trajectories/binD/: Pick  Rotate  drop  enter  forward  scan
trajlib/trajectories/binD/Untitled Folder/: drop  forward
trajlib/trajectories/binE/: Pick  drop  enter  forward  scan
trajlib/trajectories/binE/Untitled Folder/: drop
trajlib/trajectories/binF/: Pick  bin 6drop_pos  drop  enter  forward  scan
trajlib/trajectories/binG/: Pick  Rotate  drop  enter  forward  scan
trajlib/trajectories/binH/: Pick  drop  forward  scan
trajlib/trajectories/binH/Untitled Folder/: forward
trajlib/trajectories/binI/: Pick  bin 9drop_pos  drop  forward  scan
trajlib/trajectories/binJ/: Pick  drop  enter  forward  scan
trajlib/trajectories/binJ/Untitled Folder/: drop  forward
trajlib/trajectories/binK/: Pick  drop  enter  forward  scan
trajlib/trajectories/binK/Untitled Folder/: drop  forward
trajlib/trajectories/binL/: Pick  bin 12test_pos  drop  enter  forward  scan
(+233 files in other folders)
