<?xml version="1.0"?>
<package>
  <name>trajlib</name>
  <version>0.6.1</version>
  <description>Trajectory service package</description>
  <license>BSD</license>

  <author email="sachinc@willowgarage.com">Sachin Chitta</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
